--- a/style.css
+++ b/style.css
@@ -447,15 +447,9 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
 }
 
 .info-hotspot .info-hotspot-header {
-  width: 40px;
-  height: 40px;
-  border-radius: 20px;
-  background-color: rgb(103,115,131);
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-  display: flex;
-  align-items: center;
-  overflow: hidden;
+  height: 40px; /* 고정 높이 설정 */
+  display: flex; /* Flexbox 사용 */
+  align-items: center; /* 세로 중앙 정렬 */
 }
 
 .mobile .info-hotspot .info-hotspot-header {
@@ -540,14 +534,22 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
 .info-hotspot .info-hotspot-icon-wrapper,
 .info-hotspot .info-hotspot-title-wrapper,
 .info-hotspot .info-hotspot-close-wrapper {
+  height: 100%; /* 부모 요소의 높이에 맞춤 */
+  display: flex;
+  align-items: center;
+}
+
+/*
+.info-hotspot .info-hotspot-close-wrapper {
   width: 40px;
-  height: 100%;
+  height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
 }
+*/
 
 .info-hotspot:hover .info-hotspot-close-wrapper,
 .info-hotspot.visible .info-hotspot-close-wrapper {
